# Jogo_Tecprog

./: CMakeCache.txt  CMakeLists.txt  Diagrama (5).mdj  Diagrama.mdj  Diagrama0506.mdj  Makefile  ProjetoSimao.vcxproj  ProjetoSimao.vcxproj.filters  README.md  Ranking.txt  cmake_install.cmake  main.cpp  nano.10101.save
Debug/: ProjetoSimao.exe.recipe  ProjetoSimao.ilk  vc143.idb
Debug/ProjetoSimao.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProjetoSimao.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: ProjetoSimao.exe.recipe  ProjetoSimao.iobj  ProjetoSimao.ipdb
Release/ProjetoSimao.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProjetoSimao.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Ente.h  Jogo.h  Ranking.h  stdafx.h
include/ente/: Ente.h
include/ente/entidades/: Entidade.h  Jogador.h  Persongem.h  Projetil.h
include/ente/entidades/inimigos/: Atirador.h  Cookie.h  Fastasma.h  Inimigo.h  Rosquinha.h  Saltador.h
include/ente/entidades/obstaculos/: Espinhos.h  FioDental.h  Gelatina.h  Obstaculo.h  Pirulitos.h  Plataforma.h  Pote.h
include/ente/menus/: Estado.h  Menu.h  MenuComponent.h  MenuItem.h  MenuState.h
include/ente/menus/estados/: EstadoFases.h  EstadoPause.h  EstadoPrincipal.h  MenuFases.h  MenuPrincipal.h
include/fases/: BosqueDosCookies.h  CasteloAssombrado.h  CriadorEntidades.h  FMFase.h  Fase.h  FaseTeste.h  MatrizFases.h
include/fases/criadores/: CriadorBosque.h  CriadorCastelo.h  CriadorTeste.h
include/gerenciadores/: GerenciadorColisoes.cpp  GerenciadorColisoes.h  GerenciadorGrafico.h
include/listas/: Lista.h  ListaEntidade.h  ListaInimigos.h  ListaObstaculos.h
salvamento/: Cookie.txt  Fantasma.txt  FioDental.txt  Gelatina.txt  Jogador.txt  Pirulitos.txt  Plataforma.txt  Rosquinha.txt
src/: Ente.cpp  Jogo.cpp  Ranking.cpp
src/ente/: Ente.cpp
src/ente/entidades/: Entidade.cpp  Jogador.cpp  Persongem.cpp  Projetil.cpp
src/ente/entidades/inimigos/: Atirador.cpp  Cookie.cpp  Fantasma.cpp  Inimigo.cpp  Rosquinha.cpp  Saltador.cpp
src/ente/entidades/obstaculos/: Espinhos.cpp  FioDental.cpp  Gelatina.cpp  Obstaculo.cpp  Pirulitos.cpp  Plataforma.cpp  Pote.cpp
src/ente/menus/: Estado.cpp  Menu.cpp  MenuComponent.cpp  MenuItem.cpp  MenuState.cpp
src/ente/menus/estados/: EstadoFases.cpp  EstadoPause.cpp  EstadoPrincipal.cpp  MenuFases.cpp  MenuPrincipal.cpp
src/fases/: BosqueDosCookies.cpp  Casteloassombrado.cpp  CriadorEntidades.cpp  Fase.cpp  FaseTeste.cpp
src/fases/criadores/: CriadorBosque.cpp  CriadorCastelo.cpp  CriadorTeste.cpp
src/gerenciadores/: GerenciadorColisoes.cpp  GerenciadorGrafico.cpp
src/listas/: ListaInimigos.cpp  ListaObstaculos.cpp
testes/: test_persistencia.cpp  teste_Ente.cpp  teste_Ranking.cpp  teste_main.cpp
testes/ente/: teste_Ente.cpp
testes/ente/fases/: teste_Fase.cpp
testes/ente/menus/: teste_Menu.cpp
testes/gerenciadores/: teste_GerenciadorGrafico.cpp
testes/listas/: teste_Lista.cpp
